load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")

gazelle(
    name = "gazelle",
    prefix = "hack.systems/random",
)

go_library(
    name = "go_default_library",
    srcs = ["doc.go"],
    importpath = "hack.systems/random",
    visibility = ["//visibility:public"],
)
