load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["armnod.go"],
    importpath = "hack.systems/random/armnod",
    visibility = ["//visibility:public"],
    deps = ["//guacamole:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = ["armnod_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//guacamole:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
    ],
)
