load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["zipfgen.go"],
    importpath = "hack.systems/random/guacamole/zipfgen",
    visibility = ["//visibility:private"],
    deps = ["//guacamole:go_default_library"],
)

go_binary(
    name = "zipfgen",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
